--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vueuse/nuxt": "12.4.0",
     "nuxt": "^3.15.2",
     "nuxt-gtag": "3.0.2",
+    "nuxt-swiper": "2.0.0",
     "nuxt-yandex-metrika": "^1.2.9",
     "pinia": "^2.3.0",
     "qs": "^6.14.0",
