--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/seo": "^2.1.1",
+    "@nuxtjs/strapi": "^2.0.0",
     "@nuxtjs/tailwindcss": "6.13.1",
     "@pinia/nuxt": "0.9.0",
     "@vueuse/nuxt": "12.4.0",
+    "consola": "^3.4.0",
+    "dotenv": "^16.4.7",
     "nuxt": "^3.15.2",
     "nuxt-gtag": "^3.0.2",
     "nuxt-swiper": "2.0.0",
