--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nuxt-yandex-metrika": "^1.2.9",
     "pinia": "^2.3.0",
     "qs": "^6.14.0",
+    "sanitize-html": "^2.14.0",
     "vue": "latest",
     "vue-router": "latest",
     "vue-tel-input": "^9.3.0"
